# burner-browsers

./: README.md
backend/: Cargo.toml  Dockerfile  Readme.md  burner-browser-base-Dockerfile  entry.sh  nginx.conf
backend/src/: main.rs
backend/src/auth/: jwt.rs
backend/src/handler/: jwt.rs  mod.rs  startup.rs
backend/src/utils/: closeup.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: FormContainer.css  FormContainer.js  GoogleLoginButton.js  SignIn.js
frontend/src/pages/: Home.css  Home.js
