[package]
name = "burner-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
google-oauth = "1.11.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1", features = ["full"] }
tower-http = "0.5.2"
